# sisl_toolbox

./: .gitignore  CMakeLists.txt  README.md
include/sisl_toolbox/: Circle.hpp  Curve.hpp  GenericCurve.hpp  Path.hpp  SISLTB.h  StraightLine.hpp  circle.hpp  circular_arc.hpp  curve.hpp  curve_factory.hpp  defines.hpp  generic_curve.hpp  path.hpp  path_factory.hpp  persistence_manager.hpp  straight_line.hpp
include/test/: test_hippodrome.hpp  test_path.hpp  test_serpentine.hpp
script/: closestPoint.txt  intersectingCurve.txt  intersectionPoints.txt  movePoint.txt  parallelStraightLines.txt  path.txt  pathSection.txt  plotter.py  plotter_serpentine_generation.py  polygon.txt  rectangle.txt  startEndPoints.txt  testLine.txt
src/: Circle.cpp  Curve.cpp  GenericCurve.cpp  Path.cpp  StraightLine.cpp  circle.cpp  circular_arc.cpp  curve.cpp  curve_factory.cpp  generic_curve.cpp  path.cpp  path_factory.cpp  persistence_manager.cpp  straight_line.cpp
test/: path.json  test_generic_curve.cpp  test_hippodrome.cpp  test_new_path.cpp  test_polygon.cpp  test_race_track.cpp  test_serpentine.cpp  test_serpentine_extractSection.cpp  test_serpentine_generation.cpp  test_serpentine_movePoint.cpp  test_spiral.cpp
